cleanign up and fixing prime ng 11 related stuff.

--- a/School-Managment-Frontend/src/main/web/src/assets/translations/en.json
+++ b/School-Managment-Frontend/src/main/web/src/assets/translations/en.json
@@ -1,4 +1,13 @@
 {
+
+    "header": {
+        "title":"FCSF Monitors",
+        "areas":"Areas"
+    },
+
+
+
+
     "students": "Students",
     "lessons": "Lessons",
     "teachers": "Teachers",
