changed some security stuff and caried on updating frontend

--- a/School-Managment-Frontend/src/main/web/src/assets/translations/de.json
+++ b/School-Managment-Frontend/src/main/web/src/assets/translations/de.json
@@ -23,6 +23,15 @@
             "login":"Fehler beim anmelden. Überprüfen sie den Benutzername oder dsa Password!"
         }
     },
+
+    "monitor":{
+        "list":{
+            "header": "Monitors"
+        },
+        "ditails":{
+            "header": "Monitor Details"
+        }
+    },
     "students": "Schüler",
     "lessons": "Untericht",
     "teachers": "Lehrer",
