udated a lot of frontend stuff

--- a/School-Managment-Frontend/src/main/web/src/assets/translations/de.json
+++ b/School-Managment-Frontend/src/main/web/src/assets/translations/de.json
@@ -23,6 +23,11 @@
         }
     },
     "monitor": {
+        "card":{
+            "no-show-loaded":"Keine Präsentation Geladen",
+            "no-show-loaded-text":"-",
+            "image-show":"Präsentation"
+        },
         "details": {
             "header": "Monitor Details",
             "name": "Name",
