Cleaned up the Project

--- a/School-Managment-Frontend/src/main/web/src/assets/translations/de.json
+++ b/School-Managment-Frontend/src/main/web/src/assets/translations/de.json
@@ -158,7 +158,8 @@
             "header": "Präsentaionen",
             "add": "Hintufügen",
             "name": "Präsentations Name",
-            "count": "Anzahl"
+            "count": "Anzahl",
+            "created-at": "Hochgeladen am"
         },
         "upload": {
             "header": "Präsentation Hochladen",
